# agentbeats

./: README.md  pyproject.toml  scenario.toml
src/: agent.py  mock_forecaster.py  server.py
tests/: test_agent.py
